Atualização a partir do github

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> Minha página HTML </h1>
-    <h2> Alteração da pagina HTML</h2>    
+    <h2> Alteração da pagina HTML</h2>
+    <h3> Adicionando conteúdo a partir do GitHub </h3>
 </body>
 </html>
